prevent password input default eye icon

--- a/src/main/webapp/assets/css/profile.css
+++ b/src/main/webapp/assets/css/profile.css
@@ -1072,3 +1072,7 @@ body.modal-open .profile-wrapper {
     opacity: 1;
 }
 
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+    display: none;
+}
