--- a/src/main/webapp/assets/css/home.css
+++ b/src/main/webapp/assets/css/home.css
@@ -244,6 +244,13 @@ a.more {
   overflow: hidden;
 }
 
+.image img {
+  max-width: 100%; 
+  max-height: 100%;
+  object-fit: contain; 
+  display: block; 
+}
+
 .product-section .product-item h3 {
   font-weight: 600;
   font-size: 16px;
@@ -1199,18 +1206,17 @@ textarea {
 
 .cart-counter {
   position: absolute;
-  top: -5px;
-  right: -5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  top: -8px;
+  right: -10px;
+  background: #c87065;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  border-radius: 50%;
   width: 18px;
   height: 18px;
-  background-color: #0369a1;
-  color: #fff;
-  border-radius: 50%;
-  font-size: 10px;
-  font-weight: 600;
+  text-align: center;
+  line-height: 18px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
